<resources>
    <string name="app_name">ExpediaHackathon</string>

    <!-- Generic -->
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Trip Selection -->
    <string name="new_trip">New Trip</string>
    <string name="join_trip">Join Trip</string>

    <!-- Questionnaire -->
    <string name="date_range">Departure Date</string>
    <string name="date_range2">Return Date</string>
    <string name="mode_of_transportation">How do you want to travel?</string>
    <string name="car">Car</string>
    <string name="flight">Flight</string>
    <string name="rental">Do you need to rent a car? </string>
    <string name="flight_distance">How far would you fly?</string>
    <string name="drive_distance">How far would you drive?</string>
    <string name="small_distance_drive">Nearby\n(100 Miles)</string>
    <string name="medium_distance_drive">Road Trip</string>
    <string name="small_distance_flight">Not too far\n(2 hours)</string>
    <string name="medium_distance_flight">Take me away (:D)</string>

    <!-- Tinder Destination Selector -->
    <string name="loading_text">Let\'s figure out where you want to go.</string>
    <string name="take_off">Where do you want to take off from?</string>
    <string name="destination_swipe">Swipe right to check deals, left if you\'re not really interested in going.</string>
    <string name="loading_text2">Keep picking places while we load an adventure.</string>
    <string name="look_at_packages">Start looking at packages.</string>

</resources>
