<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_range" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_of_transportation" />


        <CheckBox
            android:id="@+id/cbCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car" />

        <CheckBox
            android:id="@+id/cbFlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flight" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/rental" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_rental_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/rb_rental_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drive_distance" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small_distance_drive" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium_distance_drive" />
    </LinearLayout>
</LinearLayout>